--- a/horloge-js_start-main/style.css
+++ b/horloge-js_start-main/style.css
@@ -12,17 +12,22 @@
 }
 
 .aurore {
+    background-color: orange;
 }
 
 .matin {
+    background-color: lightblue;
 }
 
 .apres-midi {   
+    background-color: cyan;
 }
 
 .soiree {
+    background-color:coral;
 }
 
 .nuit {
+    background-color: darkblue;
 }
 
